save/delete orig recordings, added SoX trim start

--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -41,6 +41,9 @@
         Text = ("Use Current Folder")
       }
     }
+    { mnuDeleteOrig Menu
+      Text = ("Delete Original Recordings")
+    }
   }
   { mnuHelp Menu
     Text = ("Help")
